CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
SET(CMAKE_SKIP_BUILD_RPATH true)

UNSET(CMAKE_CXX_STANDARD)
PROJECT(sample-generic_capi C)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src SAMPLE_SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${SAMPLE_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG_LIBRARIES} ${NAME}-generic-capi)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

ADD_DEPENDENCIES(${PROJECT_NAME} ${NAME}-generic-capi)
