CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
SET(CMAKE_SKIP_BUILD_RPATH true)

UNSET(CMAKE_CXX_STANDARD)
PROJECT(sample-tizen_capi C)

ADD_DEFINITIONS(-DLOG_TAG="BEYOND_SAMPLE")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(PKGS REQUIRED
    glib-2.0
    dlog
)

FOREACH(CFLAG ${PKGS_CFLAGS})
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFLAG}")
ENDFOREACH(CFLAG)

INCLUDE_DIRECTORIES(
    ${PROJECT_ROOT_DIR}/subprojects/libbeyond-authenticator_ssl/include
    ${PROJECT_ROOT_DIR}/subprojects/libbeyond-peer_nn/include
    ${PROJECT_ROOT_DIR}/subprojects/libbeyond-runtime_tflite/include
    include
)
AUX_SOURCE_DIRECTORY(src SAMPLE_SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${SAMPLE_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LOG_LIBRARIES} ${NAME}-tizen-capi ${PKGS_LDFLAGS})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

ADD_DEPENDENCIES(${PROJECT_NAME} ${NAME}-tizen-capi)
