SET(DNS_SD_TEST ut_discovery_dns_sd)

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
ADD_EXECUTABLE(${DNS_SD_TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${DNS_SD_TEST} gtest gtest_main ${LOG_LIBRARIES} ${BEYOND_LIBRARIES} ${NAME}-discovery_dns_sd)

INSTALL(TARGETS ${DNS_SD_TEST} DESTINATION bin)
ADD_DEPENDENCIES(${DNS_SD_TEST} ${DEPENDS_ON_BEYOND} ${NAME}-discovery_dns_sd)

ADD_TEST(
    NAME
        ${DNS_SD_TEST}
    COMMAND
        ${CMAKE_COMMAND} -E env
        LD_LIBRARY_PATH=${CMAKE_CURRENT_BINARY_DIR}/../../libbeyond:${CMAKE_CURRENT_BINARY_DIR}/../:$ENV{LD_LIBRARY_PATH}
        ${CMAKE_CURRENT_BINARY_DIR}/${DNS_SD_TEST}
)

SET_TESTS_PROPERTIES(${DNS_SD_TEST} PROPERTIES TIMEOUT ${TEST_TIMEOUT})
