CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
SET(CMAKE_SKIP_BUILD_RPATH true)
PROJECT(${NAME}-peer_nn-test CXX)

INCLUDE_DIRECTORIES(
    ${PROJECT_ROOT_DIR}/subprojects/libbeyond-authenticator_ssl/include
)

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest ${LOG_LIBRARIES} ${BEYOND_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
ADD_DEPENDENCIES(${PROJECT_NAME} ${DEPENDS_ON_BEYOND})

ADD_TEST(
    NAME
        ${PROJECT_NAME}
    COMMAND
        ${CMAKE_COMMAND} -E env
        LD_LIBRARY_PATH=${CMAKE_CURRENT_BINARY_DIR}/../../libbeyond:${CMAKE_CURRENT_BINARY_DIR}/../:${CMAKE_CURRENT_BINARY_DIR}/../../libbeyond-authenticator_ssl/:$ENV{LD_LIBRARY_PATH}
        TEST_BASEDIR=${PROJECT_ROOT_DIR}/
        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}
)

SET_TESTS_PROPERTIES(${PROJECT_NAME} PROPERTIES TIMEOUT ${TEST_TIMEOUT})
